<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="text">My Nanodegree Apps!</string>
    <string name="button0">SPOTIFY STREAMER</string>
    <string name="button1">SCORES APP</string>
    <string name="button2">LIBRARY APP</string>
    <string name="button3">BUILD IT BIGGER</string>
    <string name="button4">XYZ READER</string>
    <string name="button5">CAPSTONE: MY OWN APP</string>
</resources>
