<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.marctron.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="29dp"
        android:text="@string/text"
        android:paddingBottom="25dp" />


    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:id="@+id/button0"
        android:layout_below="@id/text"
        android:text="@string/button0"
        android:layout_centerHorizontal="true"
        android:paddingBottom="15dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:id="@+id/button1"
        android:layout_below="@id/button0"
        android:text="@string/button1"
        android:layout_centerHorizontal="true"
        android:paddingBottom="15dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:id="@+id/button2"
        android:layout_below="@id/button1"
        android:text="@string/button2"
        android:layout_centerHorizontal="true"
        android:paddingBottom="15dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:id="@+id/button3"
        android:layout_below="@id/button2"
        android:text="@string/button3"
        android:layout_centerHorizontal="true"
        android:paddingBottom="15dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:id="@+id/button4"
        android:layout_below="@id/button3"
        android:text="@string/button4"
        android:layout_centerHorizontal="true"
        android:paddingBottom="15dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:id="@+id/button5"
        android:layout_below="@id/button4"
        android:text="@string/button5"
        android:layout_centerHorizontal="true"
        android:paddingBottom="15dp" />

</RelativeLayout>
